trunk/Archive2/1a/606e2c68fa5b2e/output
main.cpp: In constructor 'C::C()':
main.cpp:12:14: error: no matching function for call to 'A::A()'
     C() : B(0) { }
              ^
main.cpp:12:14: note: candidates are:
main.cpp:4:5: note: A::A(int)
     A(int) { }
     ^
main.cpp:4:5: note:   candidate expects 1 argument, 0 provided
main.cpp:3:8: note: A::A(const A&)
 struct A {
        ^
main.cpp:3:8: note:   candidate expects 1 argument, 0 provided
